Add minor update on GNATprove model report
Signed-off-by: David MENTRE <d.mentre@fr.merce.mee.com>

--- a/model/GNATprove-MERCE/doc/GNATprove-model-report.tex
+++ b/model/GNATprove-MERCE/doc/GNATprove-model-report.tex
@@ -258,6 +258,12 @@ the situation is much less rosy. Even if a basic mapping to
 Mathematical real numbers in the prover is provided, it is much more
 difficult to prove range checks.
 
+More fundamentally, we are formally specifying or verifying detailed
+algorithms described in the SRS, but the underlying principles,
+i.e. those related to safety, are not explicitely stated. Therefore we
+are not sure such a modeling effort would be worth it for a real
+development (except maybe for absence of Run Time Error).
+
 \chapter{Detailed model description}
 
 The model is organized into a set of ADS (Ada Package Specification)
